test/expected/set_u_default_word.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "set" "-u"]
  [CompoundListCondition, None]
    [SimpleCommand "printf" "%s" "$x-$y"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "unreachable"]
[Word
  Unquoted "set"
]
[Word
  Unquoted "-u"
]
[Word
  Unquoted "printf"
]
[Word
  Literal "%s"
]
[Word
  Variable "x-$y"
]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "unreachable"
]
shit: 2:13: error: Unable to expand 'y' because the parameter is not set.
     2 |  printf '%s' "${x-$y}"
       |              ^~~~~~~~~ here.
